{
  "version": 4,
  "terraform_version": "1.8.2",
  "serial": 90,
  "lineage": "3fe4ec3c-5e5b-fa54-5e58-b5d587a2c64e",
  "resources": [
    {
      "mode": "data",
      "type": "azurerm_public_ip",
      "name": "chat-ip-data",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_method": "Dynamic",
            "ddos_protection_mode": "VirtualNetworkInherited",
            "id": "/subscriptions/4465cf7c-8bde-41f8-aa38-938da8ac30a9/resourceGroups/DevBox/providers/Microsoft.Network/publicIPAddresses/DevBox-pip",
            "idle_timeout_in_minutes": 4,
            "ip_address": "52.170.213.39",
            "ip_version": "IPv4",
            "location": "eastus",
            "name": "DevBox-pip",
            "resource_group_name": "DevBox",
            "sku": "Basic",
            "tags": {
              "environment": "dev"
            }
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_network_interface",
      "name": "nic",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "enable_accelerated_networking": false,
            "enable_ip_forwarding": false,
            "id": "/subscriptions/4465cf7c-8bde-41f8-aa38-938da8ac30a9/resourceGroups/DevBox/providers/Microsoft.Network/networkInterfaces/DevBox-nic",
            "internal_domain_name_suffix": "10vgjhcb0dteva02xbhjjropyf.bx.internal.cloudapp.net",
            "ip_configuration": [
              {
                "name": "DevBox-ipconfig",
                "primary": true,
                "private_ip_address": "10.123.1.4",
                "private_ip_address_allocation": "Dynamic",
                "private_ip_address_version": "IPv4",
                "public_ip_address_id": "/subscriptions/4465cf7c-8bde-41f8-aa38-938da8ac30a9/resourceGroups/DevBox/providers/Microsoft.Network/publicIPAddresses/DevBox-pip",
                "subnet_id": "/subscriptions/4465cf7c-8bde-41f8-aa38-938da8ac30a9/resourceGroups/DevBox/providers/Microsoft.Network/virtualNetworks/DevBox-vnet/subnets/DevBox-subnet"
              }
            ],
            "location": "eastus",
            "mac_address": "00-22-48-2D-6D-DF",
            "name": "DevBox-nic",
            "private_ip_address": "10.123.1.4",
            "private_ip_addresses": [
              "10.123.1.4"
            ],
            "resource_group_name": "DevBox",
            "tags": {
              "environment": "dev"
            },
            "virtual_machine_id": "/subscriptions/4465cf7c-8bde-41f8-aa38-938da8ac30a9/resourceGroups/DevBox/providers/Microsoft.Compute/virtualMachines/DevBox-vm"
          },
          "dependencies": [
            "azurerm_public_ip.pip",
            "azurerm_resource_group.rg",
            "azurerm_subnet.subnet",
            "azurerm_virtual_network.vnet"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_network_security_group",
      "name": "nsg",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/4465cf7c-8bde-41f8-aa38-938da8ac30a9/resourceGroups/DevBox/providers/Microsoft.Network/networkSecurityGroups/DevBox-nsg",
            "location": "eastus",
            "name": "DevBox-nsg",
            "resource_group_name": "DevBox",
            "security_rule": [
              {
                "access": "Allow",
                "description": "",
                "destination_address_prefix": "*",
                "destination_address_prefixes": [],
                "destination_application_security_group_ids": [],
                "destination_port_range": "22",
                "destination_port_ranges": [],
                "direction": "Inbound",
                "name": "AllowSSH",
                "priority": 1001,
                "protocol": "Tcp",
                "source_address_prefix": "*",
                "source_address_prefixes": [],
                "source_application_security_group_ids": [],
                "source_port_range": "*",
                "source_port_ranges": []
              }
            ],
            "tags": {
              "environment": "dev"
            },
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "azurerm_resource_group.rg"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_network_security_rule",
      "name": "allow_ssh",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access": "Allow",
            "description": "",
            "destination_address_prefix": "*",
            "destination_address_prefixes": [],
            "destination_application_security_group_ids": [],
            "destination_port_range": "22",
            "destination_port_ranges": [],
            "direction": "Inbound",
            "id": "/subscriptions/4465cf7c-8bde-41f8-aa38-938da8ac30a9/resourceGroups/DevBox/providers/Microsoft.Network/networkSecurityGroups/DevBox-nsg/securityRules/AllowSSH",
            "name": "AllowSSH",
            "network_security_group_name": "DevBox-nsg",
            "priority": 1001,
            "protocol": "Tcp",
            "resource_group_name": "DevBox",
            "source_address_prefix": "*",
            "source_address_prefixes": [],
            "source_application_security_group_ids": [],
            "source_port_range": "*",
            "source_port_ranges": [],
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "azurerm_network_security_group.nsg",
            "azurerm_resource_group.rg"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_public_ip",
      "name": "pip",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_method": "Dynamic",
            "ddos_protection_mode": "VirtualNetworkInherited",
            "id": "/subscriptions/4465cf7c-8bde-41f8-aa38-938da8ac30a9/resourceGroups/DevBox/providers/Microsoft.Network/publicIPAddresses/DevBox-pip",
            "idle_timeout_in_minutes": 4,
            "ip_address": "52.170.213.39",
            "ip_version": "IPv4",
            "location": "eastus",
            "name": "DevBox-pip",
            "resource_group_name": "DevBox",
            "sku": "Basic",
            "sku_tier": "Regional",
            "tags": {
              "environment": "dev"
            }
          },
          "dependencies": [
            "azurerm_resource_group.rg"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_subnet",
      "name": "subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address_prefixes": [
              "10.123.1.0/24"
            ],
            "enforce_private_link_endpoint_network_policies": false,
            "enforce_private_link_service_network_policies": false,
            "id": "/subscriptions/4465cf7c-8bde-41f8-aa38-938da8ac30a9/resourceGroups/DevBox/providers/Microsoft.Network/virtualNetworks/DevBox-vnet/subnets/DevBox-subnet",
            "name": "DevBox-subnet",
            "private_endpoint_network_policies_enabled": true,
            "private_link_service_network_policies_enabled": true,
            "resource_group_name": "DevBox",
            "virtual_network_name": "DevBox-vnet"
          },
          "dependencies": [
            "azurerm_resource_group.rg",
            "azurerm_virtual_network.vnet"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_subnet_network_security_group_association",
      "name": "nsg_association",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/4465cf7c-8bde-41f8-aa38-938da8ac30a9/resourceGroups/DevBox/providers/Microsoft.Network/virtualNetworks/DevBox-vnet/subnets/DevBox-subnet",
            "network_security_group_id": "/subscriptions/4465cf7c-8bde-41f8-aa38-938da8ac30a9/resourceGroups/DevBox/providers/Microsoft.Network/networkSecurityGroups/DevBox-nsg",
            "subnet_id": "/subscriptions/4465cf7c-8bde-41f8-aa38-938da8ac30a9/resourceGroups/DevBox/providers/Microsoft.Network/virtualNetworks/DevBox-vnet/subnets/DevBox-subnet"
          },
          "dependencies": [
            "azurerm_network_security_group.nsg",
            "azurerm_resource_group.rg",
            "azurerm_subnet.subnet",
            "azurerm_virtual_network.vnet"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_virtual_network",
      "name": "vnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address_space": [
              "10.123.0.0/16"
            ],
            "flow_timeout_in_minutes": 0,
            "guid": "9c64aade-d041-4ae6-835c-b84e94c5cfc5",
            "id": "/subscriptions/4465cf7c-8bde-41f8-aa38-938da8ac30a9/resourceGroups/DevBox/providers/Microsoft.Network/virtualNetworks/DevBox-vnet",
            "location": "eastus",
            "name": "DevBox-vnet",
            "resource_group_name": "DevBox",
            "subnet": [
              {
                "address_prefix": "10.123.1.0/24",
                "id": "/subscriptions/4465cf7c-8bde-41f8-aa38-938da8ac30a9/resourceGroups/DevBox/providers/Microsoft.Network/virtualNetworks/DevBox-vnet/subnets/DevBox-subnet",
                "name": "DevBox-subnet",
                "security_group": "/subscriptions/4465cf7c-8bde-41f8-aa38-938da8ac30a9/resourceGroups/DevBox/providers/Microsoft.Network/networkSecurityGroups/DevBox-nsg"
              }
            ],
            "tags": {
              "environment": "dev"
            }
          },
          "dependencies": [
            "azurerm_resource_group.rg"
          ]
        }
      ]
    }
  ]
}